# Cathode

./: .gitignore  Cathode.sln  Makefile.toml  README.md
.github/workflows/: codeql-analysis.yml  gateway-dns-server-ci.yml  gateway-server-ci.yml
Cathode.Common/: Cathode.Common.csproj  ConfigurationUtils.cs
Cathode.Common.Protocol/: ApiError.cs  ApiErrorCode.cs  ApiResponse.cs  GenericApiErrorResponse.cs
Cathode.Common/Api/: ApiContractResolver.cs  ApiErrorMiddleware.cs  ApiErrorResponseProvider.cs  ApiModelErrorFactory.cs  ApiResult.cs  ApiV1Attribute.cs  ApiValidationErrorResponse.cs
Cathode.Common/Database/: CathodeMigrationsIdGenerator.cs  DatabaseUtils.cs
Cathode.Common/Settings/: ISettingsDbProvider.cs  ISettingsProvider.cs  SettingsEntry.cs  SettingsProvider.cs
Cathode.Gateway/: Cathode.Gateway.csproj  Dockerfile  GatewayDb.cs  GatewayOptions.cs  GatewaySetting.cs  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
Cathode.Gateway.Client/: Cathode.Gateway.Client.csproj
Cathode.Gateway.Protocol/Index/: ConnectionInformation.cs  IndexRegisterRequest.cs  IndexRegisterResponse.cs  PingResponse.cs  RegisterRequest.cs  RegisterResponse.cs  UpdateRequest.cs
Cathode.Gateway/Authentication/: AuthenticationService.cs  AuthenticationSettings.cs  CathodeAuthenticationHandler.cs  ConfigureJwtOptions.cs  GatewayClaims.cs  IAuthEntity.cs  (+2 more)
Cathode.MediaServer/: Startup.cs
gateway-dns/: Cargo.toml  Dockerfile  config.toml
gateway-dns/src/: authority.rs  config.rs  main.rs  models.rs  schema.rs
server/: Cargo.toml  Cathode.sln
(+65 files in other folders)
