[package]
name = "gateway-dns"
version = "0.1.0"
authors = ["Chandler Newman <chandler2newman@hotmail.co.uk"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
log = "0.4.14"
chrono = "0.4.19"
futures = { version = "0.3.15", default-features = false, features = ["std"] }
simplelog = "0.10.0"
tokio = { version = "1.8.1", features = ["time"] }
trust-dns-proto = "0.20.3"
trust-dns-server = "0.20.3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = "0.8"
config = "0.11"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
